# render_util

./: .gitlab-ci.yml  .gitlab-ci.yml.inactive  .gitmodules  CMakeLists.txt  Makefile  TODO-aerial-perspective  cflags.cmake  cflags.mk  render_util.kdev4  rules.mk
engine/: Makefile  camera.cpp  image_util.cpp  map_textures.cpp  shader.cpp  shader_util.cpp  terrain.cpp  terrain_cdlod.cpp  texture_manager.cpp  texture_util.cpp  texunits.cpp  water.cpp
gl_binding/: CMakeLists.txt  enabled_procs  enabled_procs.py.in  gl_binding_main.cpp  gl_interface.cpp
gl_binding/scripts/: generate_enabled_procs  parser.py  print_forward.py  print_forward_table.py  print_inline_forwards.py  print_p_proc.py  print_p_proc_init.py
gl_wrapper/: CMakeLists.txt  Makefile  gl_interface.cpp  gl_wrapper_main.cpp
gl_wrapper/scripts/: print_forward.py  print_forward_table.py  print_inline_forwards.py  print_p_proc.py
include/: atmosphere_map.h  block_allocator.h  curvature_map.h  distances.h  engine.h  factory.h  file.h  log.h  map_loader_base.h  output_stream.h  plog  precomputed_atmospheric_scattering  precomputed_precomputed_atmospheric_scattering  render_util.h  simple_dispatcher.h  text_renderer  util.h  viewer.h
include/engine/: elevation_map.h  image_loader.h  image_resample.h  image_util.h  map.h  map_textures.h  shader_util.h  terrain.h  terrain_base.h  terrain_cdlod.h  texture_manager.h  texture_util.h  texunits.h  water.h  water_map.h
include/gl_wrapper/: gl_functions.h  gl_interface.h  gl_wrapper.h
include/log/: color_console_appender_unix.h  console_appender.h  file_appender.h  message_only_formatter.h  txt_formatter.h
include/render_util/: aerial_perspective.h  atmosphere.h  camera.h  cirrus_clouds.h  config.h.in  draw_box.h  elevation_map.h  geometry.h  gl_context.h  globals.h  image.h  image_loader.h  image_resample.h  image_util.h  land_textures.h  map.h  map_base.h  map_loader_base.h  map_textures.h  parameter_wrapper.h  physics.h  quad_2d.h  render_util.h  shader.h  shader_util.h  skybox.h  state.h  terrain.h  terrain_base.h  terrain_cdlod.h  terrain_util.h  text_display.h  texture_manager.h  texture_util.h  texunits.h  texunits.priv  vao.h  viewer.h  viewer_parameter.h  water.h  (+1 more)
include/render_util/gl_binding/: gl_binding.h  gl_functions.h  gl_interface.h
precomputed_atmospheric_scattering/atmosphere/: constants.h  definitions.glsl  functions.glsl  model.cc  model.h
precomputed_precomputed_atmospheric_scattering/atmosphere/: constants.glsl  definitions.glsl  functions.glsl  model.cc  model.h
scripts/: print-used-gl-procs.bash
shaders/: aerial_perspective.glsl  atmosphere.frag  atmosphere.vert  cirrus.frag  cirrus.program  cirrus.vert  cirrus_util.glsl  compute_aerial_perspective.glsl  compute_aerial_perspective.program  forest.frag  forest.program  forest_cdlod.program  forest_util.frag  frustum.glsl  lighting.frag  lighting.glsl  lighting_definitions.glsl  main.frag  main.vert  noise.glsl  noise.vert  quad_2d.frag  quad_2d.program  quad_2d.vert  sky.frag  sky.program  sky.vert  terrain.frag  terrain.program  terrain.vert  terrain_cdlod.program  terrain_cdlod.vert  terrain_geometry_util.glsl  terrain_geometry_util.h.glsl  terrain_heightmap_only.frag  terrain_heightmap_only_cdlod.program  terrain_params.h.glsl  terrain_simple.frag  terrain_simple.program  terrain_simple_cdlod.program  (+6 more)
shaders/atmosphere_precomputed/: atmosphere.frag  cirrus.program  compute_aerial_perspective.glsl  compute_aerial_perspective.program  lighting.frag  sky.frag  sky.program  terrain_cdlod.program  tonemap.glsl
shaders/atmosphere_precomputed/internal/: compute.geom  compute.vert  compute_direct_irradiance.frag  compute_direct_irradiance.program  compute_indirect_irradiance.frag  compute_indirect_irradiance.program  compute_multiple_scattering.frag  compute_multiple_scattering.program  compute_scattering_density.frag  compute_scattering_density.program  compute_single_scattering.frag  compute_single_scattering.program  compute_transmittance.frag  compute_transmittance.program  plot_inverse_parameterisation.compute  plot_inverse_parameterisation.program  plot_parameterisation.compute  plot_parameterisation.program
src/: CMakeLists.txt  Makefile  aerial_perspective.cpp  atmosphere.cpp  atmosphere_map.cpp  atmosphere_precomputed.cpp  atmosphere_precomputed.h  camera.cpp  cirrus.cpp  curvature_map.cpp  gl_context.cpp  globals.cpp  grid_mesh.cpp  grid_mesh.h  image_loader.cpp  image_util.cpp  image_writer.cpp  indexed_mesh.cpp  indexed_mesh.h  map_textures.cpp  quad_2d.cpp  shader.cpp  shader_util.cpp  spheres.cpp  spheres.h  state.cpp  terrain.cpp  terrain_cdlod.cpp  terrain_cdlod_base.cpp  terrain_cdlod_base.h  terrain_util.cpp  text_display.cpp  texture_manager.cpp  texture_util.cpp  texunits.cpp  util.cpp  uv_dome.cpp  uv_dome.h  vao.cpp  vao.h  (+1 more)
src/terrain/: forest.cpp  forest.h  forest_textures.cpp  forest_textures.h  land.cpp  land.h  land_textures.cpp  land_textures.h  layer.h  noise.cpp  noise.h  subsystem.h  terrain.cpp  terrain_cdlod.cpp  terrain_cdlod_base.cpp  terrain_cdlod_base.h  terrain_layer.h  terrain_util.cpp  textures.h  water.cpp  water.h  water_textures.cpp  water_textures.h
testbed/: CMakeLists.txt  Makefile  map_loader.cpp  map_loader.h  simple_test.cpp  terrain_test.cpp  texture.cpp  texture.h  tiff.cpp  tiff.h  view_heightmap.cpp
text_renderer/: LICENSE  font.inc  text_renderer.cc
tools/: CMakeLists.txt  Makefile  atmosphere_map.cpp  create_atmosphere_map.cpp  create_curvature_map.cpp  curvature_map.cpp  dispatcher.h  threaded_dispatcher.h
util/: CMakeLists.txt  normal_file.cpp
viewer/: CMakeLists.txt  Makefile  camera.h  heightmap_viewer.cpp  parameter.h  scene.h  scene_base.h  simple_viewer_application.cpp  simple_viewer_application.h  simple_viewer_scene.cpp  terrain_viewer.cpp  viewer_main.cpp  viewer_main.h
viewer/text_renderer/: text_renderer.cc  text_renderer.h
